styles.css
/* ... */
.nav-bar__link:hover {
	cursor: pointer;
	color: var(--accent);
}

.nav-link__emoji {
	display: none;
}

@media screen and (max-width: 768px) {
	body.active {
		overflow: hidden;
	}

	.nav-link__emoji {
		display: inline-block;
	}

	.nav-bar__menu {
		position: absolute;
		width: 100%;
		top: -1000%;

		display: grid;
		grid-template-rows: repeat(1, 1fr);
		grid-template-columns: repeat(1, 1fr);
		transition: all 0.25s ease-in-out;
	}

	.nav-bar__menu.active {
		display: flex;
		align-items: center;
		flex-direction: column;
		justify-content: center;

		top: 100%;
		opacity: 1;
		z-index: 100;
		height: 100vh;
		font-size: 1.2rem;
		height: calc(100vh - 60px);
		background-color: var(--blak);
		transition: all 0.25s ease-in-out;
	}

	.nav-bar__link {
		height: 10%;
		padding: 5% 10%;
		font-size: 1.5rem;
	}

	.nav-bar__toggle .menu-bar {
		width: 20px;
		height: 2.5px;
		display: block;
		margin: 4px auto;
		background: var(--wyt);
		transition: all 0.25s ease-in-out;
	}

	.nav-bar__toggle:hover .menu-bar,
	.nav-bar__toggle .menu-bar:hover {
		cursor: pointer;
	}

	.nav-bar__toggle:hover .menu-bar,
	.nav-bar__toggle:focus .menu-bar {
		background-color: var(--wyt);
	}

	.nav-bar__toggle:active .menu-bar {
		background-color: var(--accent);
		filter: saturate(2);
	}

	.nav-bar__link:hover,
	.nav-bar__link:focus {
		color: var(--accent);
	}

	.nav-bar__link:active {
		filter: saturate(2);
	}

	#nav-bar__mobile-menu {
		position: absolute;
		top: 25%;
		right: 6%;

		transform: translate(6%, 20%);
	}

	#nav-bar__mobile-menu.active .menu-bar:nth-child(1) {
		transform: translateY(6.5px) rotate(45deg);
	}

	#nav-bar__mobile-menu.active .menu-bar:nth-child(3) {
		transform: translateY(-6.5px) rotate(-45deg);
	}

	#nav-bar__mobile-menu.active .menu-bar:nth-child(2) {
		opacity: 0;
	}
}

/* Hero */
.hero {
	background: linear-gradient(
			to top,
			rgba(20, 20, 20, 0.76),
			rgba(153, 0, 255, 0.356)
		),
		url(assets/images/g-1.jpg) no-repeat center center;
	background-size: cover;
	height: calc(100vh - 60px);
	color: white;
	width: 100vw;
}

.hero__content {
	width: 100%;
	height: 100%;
	line-height: 1;
	padding-left: 13.5vw;

	display: flex;
	align-items: flex-start;
	flex-direction: column;
	justify-content: center;
}

.hero__content .title {
	text-transform: uppercase;
	font-size: clamp(1.5rem, 8vw, 2.5rem);
}

.hero__content .motto {
	text-align: start;
	margin-top: 1.5em;
	margin-bottom: 0.5em;
	font-size: clamp(0.8rem, 4vw, 1.2rem);
}

/* Services */
.services {
	width: 100%;
	height: 100%;

	padding: 2rem calc((100vw - 1100px) / 2);
}

.services__wrapper {
	display: grid;
	/* padding: 1.01rem; */
	grid-template-columns: repeat(2, 1fr);
}

.services__wrapper,
.services__wrapper div {
	width: 100%;
	height: 100%;
}

.services__wrapper div:nth-child(1) {
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding: 1rem 4rem;
}

.by-line {
	color: var(--accent);
	font-weight: bolder;
	margin-bottom: 0.6rem;
	text-transform: uppercase;
}

.services__title {
	font-size: clamp(1.5rem, 5vw, 2.8rem);
	margin-bottom: 1.1rem;
}

.service__offers {
	list-style: none;
}

.service__offer {
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: flex-start;
}

.service__offer p {
	margin: 0.04rem 0.4rem;
	font-size: clamp(0.8rem, 4vw, 1.2rem);
}

.service__offer .service__icon {
	stroke-width: 2.7;
	stroke: var(--accent);
}

.services__wrapper div {
	width: 100%;
	height: 100%;
}

.services__wrapper div .services__img {
	width: 100%;
	height: 100%;
}

@media screen and (max-width: 768px) {
	.services__wrapper {
		grid-template-columns: repeat(1, 1fr);
	}

	.services__wrapper div:nth-child(1) {
		margin-bottom: 0.8rem;
	}
}

/* Subcriptions */
.sub-plans {
	color: var(--wyt);
	text-align: center;
	background: var(--blak);
	padding: 2rem calc((100vw - 1100px) / 2);
}

.sub-plans h1 {
	padding: 0 0.8rem;
	margin-bottom: 0.8rem;
	font-size: clamp(1.5rem, 4vw, 3.2rem);
}

.sub-plans__info {
	/* padding: 1.5rem; */
	margin-bottom: 2.5rem;
	font-size: clamp(0.8rem, 4vw, 1rem);
}

.sub-plans__wrapper {
	/* padding: 1.5rem; */

	display: flex;
	flex-direction: row;
	align-items: flex-start;
	justify-content: space-between;
}

.sub-plan__card {
	width: 324px;
	min-height: 470px;
	padding: 2rem;
	border-radius: 0.25em;

	display: flex;
	flex-direction: column;
	justify-content: space-between;

	color: var(--blak);
	background-color: var(--wyt);
}

.sub-plan__icon {
	font-size: 2.2rem;
}

/* Gold subscription icon should be larger */
.sub-plan__card:nth-child(2) .sub-plan__icon {
	font-size: 3.2rem;
}

.sub-plan__card .sub-plan__title h4 {
	margin: 1rem 0rem;
	font-size: clamp(1.2rem, 6vw, 1.8rem);
}

.sub-plan__card p {
	margin: 0.4rem 0rem;
	font-size: clamp(0.8rem, 6vw, 1rem);
}

.sub-plan__info {
	min-height: 200px;
}

@media screen and (max-width: 1100px) {
	.sub-plans__wrapper {
		align-items: center;
		flex-direction: column;
	}

	.sub-plan__card {
		width: 90%;
		margin: 1.2rem 0rem;
		height: 400px;
	}

	.sub-plan__info {
		min-height: 100px;
	}

	.sub-plan__icon {
		font-size: 6rem;
	}

	.sub-plan__card .sub-plan__title h4 {
		margin: 1rem 0rem;
		font-size: clamp(1.5rem, 6vw, 3rem);
	}

	.sub-plan__card p {
		margin: 0.4rem 0rem;
		font-size: clamp(1.2rem, 6vw, 1.45rem);
	}

	/* Gold subscription icon should be larger */
	.sub-plan__card:nth-child(2) .sub-plan__icon {
		font-size: 10rem;
	}
}

/* Staff */
.staff {
	padding: 2rem calc((100vw - 1100px) / 2);
}

.staff__wrapper {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: repeat(auto, 250px);
}

.staff__info {
	padding: 1rem;
}

.staff__info h1 {
	margin-bottom: 1rem;
	font-size: clamp(2rem, 4vw, 3rem);
}

.coaches__info {
	line-height: 1.3;
	font-size: clamp(1rem, 4vw, 1.4rem);
}

.staff__card {
	margin: 1rem;
	border-radius: 8px;
	position: relative;
}
/* ... */

